# aes-debug

./: Dockerfile  aes_algorithms.txt  aes_bench_from_list.sh  m1_aes_benchmark_results.csv  m1_vm_aes_benchmark_results.csv  m4_lima_aes_benchmark_results.csv  plot_aes_benchmarks.py  plot_aes_traces.py  pyproject.toml  run_dtrace_n_times.sh  run_openssl.sh  speed.out  trace.out  trace_16B.out  trace_64B.out  trace_comparison.csv  trace_comparison_averaged.csv
bak/: speed_aes_128_ctr_16Bblock.out  speed_aes_128_ctr_16Bblock_count.out  speed_aes_128_ctr_64Bblock.out  speed_aes_128_ctr_64Bblock_count.out
container_out/: aes_benchmark_results.csv
out.100.bak/: trace_16B_1.out  trace_16B_10.out  trace_16B_100.out  trace_16B_11.out  trace_16B_12.out  trace_16B_13.out  trace_16B_14.out  trace_16B_15.out  trace_16B_16.out  trace_16B_17.out  trace_16B_18.out  trace_16B_19.out  trace_16B_2.out  trace_16B_20.out  trace_16B_21.out  trace_16B_22.out  trace_16B_23.out  trace_16B_24.out  trace_16B_25.out  trace_16B_26.out  trace_16B_27.out  trace_16B_28.out  trace_16B_29.out  trace_16B_3.out  trace_16B_30.out  trace_16B_31.out  trace_16B_32.out  trace_16B_33.out  trace_16B_34.out  trace_16B_35.out  trace_16B_36.out  trace_16B_37.out  trace_16B_38.out  trace_16B_39.out  trace_16B_4.out  trace_16B_40.out  trace_16B_41.out  trace_16B_42.out  trace_16B_43.out  trace_16B_44.out  (+160 more)
out.50.bak/: trace_16B_1.out  trace_16B_10.out  trace_16B_11.out  trace_16B_12.out  trace_16B_13.out  trace_16B_14.out  trace_16B_15.out  trace_16B_16.out  trace_16B_17.out  trace_16B_18.out  trace_16B_19.out  (+89 more)
